testsuite/poke.pkl/cast-void-diag-1.pk
/* { dg-do compile } */

type Pac0et = struct { };

var x=0 as  void ;  /* { dg-error "not allowed" } */
